# sci-rs

./: Cargo.toml
sci-rs/: Cargo.toml
sci-rs-core/: Cargo.toml
sci-rs-core/src/: lib.rs
sci-rs-core/src/num_rs/: mod.rs
sci-rs-core/src/num_rs/convolve/: mod.rs
sci-rs/benches/: lfilter.rs
sci-rs/src/signal/: convolve.rs  mod.rs
sci-rs/src/signal/filter/: arraytools.rs  filtfilt.rs  lfilter.rs  lfilter_zi.rs  mod.rs  savgol_filter.rs  sosfilt.rs  upfirdn.rs
sci-rs/src/signal/filter/design/: cplx.rs  firwin.rs  iirfilter.rs  kaiser.rs  lp2bp_zpk.rs  lp2bs_zpk.rs  lp2lp_zpk.rs  zpk2sos.rs
sci-rs/src/signal/wave/: mod.rs
sci-rs/src/signal/windows/: boxcar.rs  general_hamming.rs  kaiser.rs  mod.rs  triangle.rs
sci-rs/src/special/: i0.rs  mod.rs
sciprs/: Cargo.toml  pyproject.toml  test_i0.py
sciprs/src/: lib.rs
