[package]
name = "sciprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sciprs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = "0.23.3"
sci-rs = { path = "../sci-rs", features=["std"] }

[tool.maturin]
profile = "release"
